laborations/lab1/testsuite/good/synthetic025.cc
int main () {
	a::b::c << "apa";
}
