laborations/lab1/testsuite/bad/bad120.cc
int main() {
	while int x;
}
